--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,5 @@
   command = "npm run build"  # ou seu comando de build
   publish = "build"          # pasta de output
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  [functions]
+  directory = "netlify/functions"  # Diretório onde as funções serverless estão localizadas
